# FuseIC3

./: .gitignore  CMakeLists.txt  README.md
docs/: fuseIC3.doxyfile
include/: family_ic3.h  fuse.h  ia.h  ic3.h  opts.h  simple_ic3.h  solver.h  ts.h  unroll.h  utils.h
src/: family_ic3.cpp  fuse.cpp  ia.cpp  ic3.cpp  main.cpp  simple_ic3.cpp  solver.cpp  ts.cpp  unroll.cpp  utils.cpp
